feat: enhance Journey section and update configurations

--- a/src/data/journey/journey.mdx
+++ b/src/data/journey/journey.mdx
@@ -1,12 +1,12 @@
 ---
-title: "My Journey"
-description: "Timeline of learning and milestones"
+title: 'My Journey'
+description: 'Timeline of learning and milestones'
 date: '2025-10-10'
 ---
 
 # My Journey
 
-A concise timeline of learning, projects, and milestones. Edit this file at `src/data/journey/journey.mdx` to add your own entries.
+A concise timeline of learning, projects, and milestones.
 
 ![SSoC Certificate](/certificates/ssoc-piyush.png)
 
@@ -31,7 +31,3 @@ A concise timeline of learning, projects, and milestones. Edit this file at `src
 ## 2023
 
 - Worked on several open-source projects and published a few blog posts about MDX & Next.js integration.
-
----
-
-You can embed components, images, and links here. Use the `public/certificates` folder to store certificate images and reference them with `/certificates/<file>.png`.
